tests/toy/neg/000489_mutation.toylang
program a = { a = do 0; } .
